[Edit] clear data when fetch

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,7 @@
 <script>
 
   function myFunction() {
+    document.getElementById("demo").innerHTML = "";
     document.getElementById("error").innerHTML = "";
     var inpObj = document.getElementById("link-form");
     if (!inpObj.checkValidity()) {
